--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -23,8 +23,7 @@
 
   <body class="<%= page_classes %>">
     <%= yield %>
-    <%= javascript_include_tag "jquery-1.11.2", "owl.carousel", "all" %>
+    <%= javascript_include_tag "jquery-1.11.2", "all" %>
     <%= partial "analytics" %>
-    <%= partial "chat" %>
   </body>
 </html>
