--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -102,6 +102,18 @@
   }
 }
 
+.section.clients{
+  position:relative;
+
+  h3{
+    font-size:40px;
+  }
+
+  img {
+    width: 100%;
+  }
+}
+
 .section.projects{
   position:relative;
 
