--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -8,47 +8,34 @@
   </h3>
 </div>
 <hr>
-<div class="section projects">
+<div class="section clients">
   <h3>
-    Selected Projects
+    Clients We’ve Worked With
   </h3>
-  <div class="arrow prev-arrow"></div>
-  <div class="arrow next-arrow"></div>
-  <div class="owl-carousel">
-    <div class="item">
-      <a href="http://saluqi.me" target="_blank"><img src="/images/projects/saluqi.png" alt=""></a>
-      <h3>Saluqi.me</h3>
-      <p>Saluqi was founded in Dubai by multicultural expats with one simple goal: Make it easier to get going with online presence, so businesses could get growing. </p>
+  <div class="container">
+    <div class="col-lg-3 col-md-3 col-sm-6 box">
+      <img src="/images/clients/yr.jpg">
     </div>
-    <div class="item">
-      <img src="/images/projects/tsystems.png" alt="">
-      <h3>T-Systems Startbook</h3>
-      <p>Windows 8 application for T-Systems, designed to present the history, goals, operation and services of the company.</p>
+    <div class="col-lg-3 col-md-3 col-sm-6 box">
+      <img src="/images/clients/metro.jpg">
     </div>
-    <div class="item">
-      <a href="http://gifszinhaz.hu" target="_blank"><img src="/images/projects/giformances.png" alt=""></a>
-      <h3>Giformances</h3>
-      <p>An award winning advertising project. It is a catalogue of emotion gifs, ready to be shared on any social platform, performed by the theatre company's most popular actors. </p>
+    <div class="col-lg-3 col-md-3 col-sm-6 box">
+      <img src="/images/clients/telenor.jpg">
     </div>
-    <div class="item">
-      <a href="http://stockmystore.com.au" target="_blank"><img src="/images/projects/stockmystore.png" alt=""></a>
-      <h3>Stock my Store</h3>
-      <p>Australia's online wholesale marketplace for retail stores to browse, enquire and order the widest possible range of quality products without leaving the office. It is also a showcase for brands new and established to connect with retailers around Australia and, given the global reach of the world-wide web, internationally.</p>
+    <div class="col-lg-3 col-md-3 col-sm-6 box">
+      <img src="/images/clients/myjet.jpg">
     </div>
-    <div class="item">
-      <a href="https://viqli.co" target="_blank"><img src="/images/projects/viqli.png" alt=""></a>
-      <h3>Viqli</h3>
-      <p>Viqli is a simple, inspirational social network that allows you to create, share and find food related content tailored to your individual tastes. Viqli strives to build a community of individuals who love ingenuity, appreciate artistry and have an avid interest in recreating the world of gastronomy.  </p>
+    <div class="col-lg-3 col-md-3 col-sm-6 box">
+      <img src="/images/clients/brf.jpg">
     </div>
-    <div class="item">
-      <a href="http://artier.hu" target="_blank"><img src="/images/projects/artier.png" alt=""></a>
-      <h3>The Artier</h3>
-      <p>The Artier’s goal is to support and introduce the upcoming talents. Furthermore, to publicize the already known and succeeded brands and artist, thus directly bring together the interested and the customers to them no matter where they are in the World.</p>
+    <div class="col-lg-3 col-md-3 col-sm-6 box">
+      <img src="/images/clients/wunderman.jpg">
     </div>
-    <div class="item">
-      <a href="https://metroirodaszer.hu" target="_blank"><img src="/images/projects/metroirodaszer.png" alt=""></a>
-      <h3>Metro Irodaszer</h3>
-      <p>Stationery webshop for Metro retailing company. Clients can order from the store closest to their premises. The webshop currently handles 12 Metro stores and stock information.</p>
+    <div class="col-lg-3 col-md-3 col-sm-6 box">
+      <img src="/images/clients/magnet.jpg">
+    </div>
+    <div class="col-lg-3 col-md-3 col-sm-6 box">
+      <img src="/images/clients/zsidai.jpg">
     </div>
   </div>
 </div>
