--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,7 +4,7 @@
     for your startup or advertising agency.
   </h2>
   <h3>
-    We solve complex problems with Ruby on Rails, Ember.js and Elixir.
+    We solve complex problems with Ruby on Rails, Ember.js and Elixir since 2014.
   </h3>
 </div>
 <hr>
